--- a/src/assets/scss/Landing/_title.scss
+++ b/src/assets/scss/Landing/_title.scss
@@ -6,10 +6,20 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+
+  .title-img {
+    opacity: 10%;
+    position:absolute;
+    width: 100vw;
+    height: 100vh;
+    z-index: 0;
+  }
 
   .title-container {
     width: 75%;
-
+    position: absolute;
+    z-index: 1;
   }
 
   h1 {
@@ -40,12 +50,12 @@
     padding: 20px 0 5px 0;
     width: 60%;
     // box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-
-    &:hover {
-      box-shadow: rgba(0, 0, 0, 0.24) 0px 6px 12px;
-      // box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    }
+    // box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    //
+    // &:hover {
+    //   box-shadow: rgba(0, 0, 0, 0.24) 0px 6px 12px;
+    //   // box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    // }
 
   }
 
@@ -57,6 +67,6 @@
   .button-text{
     color: $moma-black;
     font-size: 18px;
-    font-weight: 300;
+    // font-weight: 600;
   }
 }
