--- a/src/assets/scss/Explore/_explorecard.scss
+++ b/src/assets/scss/Explore/_explorecard.scss
@@ -7,6 +7,14 @@
   .explore-card-title {
     text-align: center;
     margin-top: 20px;
+    // margin-bottom: 10px;
+  }
+
+  .explore-card-youtube {
+    margin-left: 20px;
+    width: 30px;
+    height: auto;
+    cursor: pointer;
   }
 
   .css-kdijfp-Wrapper {
