--- a/src/assets/scss/moma.scss
+++ b/src/assets/scss/moma.scss
@@ -14,4 +14,6 @@
 @import "Download/download";
 @import "Publication/publication";
 @import "Explore/explore";
+@import "Explore/timeline";
+@import "Explore/filter";
 @import "Explore/explorecard";
