--- a/src/assets/scss/Explore/_explore.scss
+++ b/src/assets/scss/Explore/_explore.scss
@@ -1,17 +1,52 @@
+
 .explore {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  // min-height: 100vh;
   display: flex;
   color: $moma-black;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   font-family: 'Rubik', sans-serif;
-  padding-top: 100px;
+  // margin-top: 100px;
+  position: absolute;
+  top: 100px;
+  // height: calc(100%);
+  overflow: hidden;
+  // position: fixed;
+  // top: 80px;
+  // overflow-y: scroll;
+
+  .explore-contianer {
+    overflow: scroll;
+  }
+
+  .scroll-pre {
+    height: 100px;
+    width: 100%;
+    background-color: inherit;
+    position: fixed;
+  }
 
   .explore-title {
     border-left: 4px solid $moma-light-green;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
+  }
+
+  .explore-class-box {
+    width: 70%;
+    border-style: solid;
+    border-width: thin;
+    border-color: $moma-dark-green;
+    // border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    &:hover {
+      cursor: pointer;
+      background-color: $moma-light-grey;
+      // text-shadow: 2px 2px 4px #DDBFAA;
+    }
   }
 
   Button {
