--- a/src/assets/scss/moma.scss
+++ b/src/assets/scss/moma.scss
@@ -1,5 +1,6 @@
 @import "~bootstrap/scss/bootstrap";
 
+@import "responsive";
 @import "Theming/colors";
 @import "Theming/navbar";
 @import "Theming/buttons";
