--- a/src/assets/scss/Explore/_explore.scss
+++ b/src/assets/scss/Explore/_explore.scss
@@ -2,22 +2,24 @@
 .explore {
   width: 100%;
   height: 100%;
-  // min-height: 100vh;
   display: flex;
   color: $moma-black;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   font-family: 'Rubik', sans-serif;
-  // margin-top: 100px;
   position: absolute;
   top: 100px;
-  // height: calc(100%);
-  overflow: hidden;
-  // position: fixed;
-  // top: 80px;
-  // overflow-y: scroll;
+  @include mobile {
+    width: auto;
+    margin: 15px 15px 0 20px;
+    font-size: 14px;
+  }
 
+  .explore-title {
+    border-left: 4px solid $moma-light-green;
+    margin-bottom: 30px;
+  }
   .explore-contianer {
     overflow: scroll;
   }
@@ -29,10 +31,6 @@
     position: fixed;
   }
 
-  .explore-title {
-    border-left: 4px solid $moma-light-green;
-    margin-bottom: 15px;
-  }
 
   .explore-class-box {
     width: 70%;
