--- a/src/assets/scss/Landing/_team.scss
+++ b/src/assets/scss/Landing/_team.scss
@@ -19,6 +19,10 @@
 
   .team-container {
     width: 750px;
+
+    @include mobile {
+      width: 300px;
+    }
   }
   .team-card {
     display: flex;
